--- a/1ra pag web/index.html
+++ b/1ra pag web/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,900" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mi primera pagina web</title>
+    <title>Dulces Milt</title>
 </head>
 <body>
     <div class="col-md-4 center-block quitar-float text-center espacio-arriba">
